# umock-c

./: .gitignore  .gitmodules  CMakeLists.txt  dependencies.cmake  readme.md
.github/: fabricbot.json
configs/: umock_cConfig.cmake  umock_cFunctions.cmake
devdoc/: umock_c_lib_requirements_with_ids.md  umock_c_negative_tests_requirements.md  umock_c_requirements.md  umock_lock_factory_pthread.md  umock_lock_factory_windows.md  umockalloc_requirements.md  umockautoignoreargs_requirements.md  umockcall_requirements.md  umockcallpairs_requirements.md  umockcallrecorder_requirements.md  umockstring_requirements.md  umocktypename_requirements.md  umocktypes_bool_requirements.md  umocktypes_c_requirements.md  umocktypes_charptr_requirements.md  umocktypes_requirements.md  umocktypes_stdint_requirements.md  umocktypes_struct_requirements.md  umocktypes_wcharptr_requirements.md  umocktypes_windows_requirements.md
doc/: umock_c.md
inc/: umock_c.h  umock_c_internal.h  umock_c_prod.h  umocktypes.h  umocktypes_c.h  umocktypes_stdint.h  umocktypes_struct.h
inc/umock_c/: umock_c.h  umock_c_internal.h  umock_c_prod.h  umock_lock_factory.h  umock_lock_factory_default.h  umock_lock_if.h  umockcallrecorder.h  umocktypes.h  umocktypes_bool.h  umocktypes_c.h  umocktypes_stdint.h  umocktypes_struct.h  umocktypes_wcharptr.h  umocktypes_windows.h
src/: umock_c.c  umock_c_negative_tests.c  umock_lock_factory_pthread.c  umock_lock_factory_windows.c  umock_log.c  umockalloc.c  umockautoignoreargs.c  umockcallpairs.c  umockcallrecorder.c  umocktypes.c  umocktypes_bool.c  umocktypes_c.c  umocktypes_charptr.c  umocktypes_stdint.c  umocktypes_wcharptr.c  umocktypes_windows.c
tests/: CMakeLists.txt
tests/umock_c_gen_func_decl_int/: CMakeLists.txt  main.c  umock_c_gen_func_decl_int.c  umock_c_gen_func_multiple_inc.c
tests/umock_c_int/: CMakeLists.txt  test_dependency.h  umock_c_int.c
tests/umock_c_malloc_hook_int/: CMakeLists.txt  umock_c_malloc_hook_int.c
tests/umock_c_mock_filters_int/: CMakeLists.txt  test_dependency.h  umock_c_mock_filters_int.c
tests/umock_c_negt_int/: CMakeLists.txt  test_dependency.h  umock_c_negt_int_tests.c
tests/umock_c_negt_noini_ut/: CMakeLists.txt  umock_c_negt_noint_tests.c
tests/umock_c_negt_ut/: CMakeLists.txt  umock_c_negative_tests_ut.c
tests/umock_c_ptrarg_leak_int/: CMakeLists.txt  umock_c_ptrarg_leak_int.c
tests/umock_c_reals_int/: CMakeLists.txt  test_dependency.h  test_dependency_no_enable_mocks.h  test_unit_no_reals.h  umock_c_reals_int.c
tests/umock_c_reg_win_types_int/: CMakeLists.txt  main.c  umock_c_reg_win_types_int.c
tests/umock_c_ut/: CMakeLists.txt  umock_c_ut.c
tests/umock_c_windows_types_int/: CMakeLists.txt  main.c  test_dependency.h  umock_c_windows_types_int.c
tests/umock_c_with_lock_factory_int/: CMakeLists.txt  main.c  umock_c_with_lock_factory_int.c
tests/umock_c_with_lock_factory_int/minipal/: umock_threadapi.h  umock_threadapi_pthread.c  umock_threadapi_win32.c
tests/umock_c_wout_init_ut/: CMakeLists.txt  umock_c_wout_init_ut.c
tests/umock_lock_factory_pthread_ut/: CMakeLists.txt  main.c  umock_lock_factory_pthread_mocked.c  umock_lock_factory_pthread_ut.c
tests/umock_lock_factory_windows_ut/: CMakeLists.txt  main.c  umock_lock_factory_windows_mocked.c  umock_lock_factory_windows_ut.c
tests/umockalloc_ut/: CMakeLists.txt  umockalloc_ut.c
tests/umockautoignoreargs_ut/: CMakeLists.txt  umockautoignoreargs_ut.c
tests/umockcall_ut/: CMakeLists.txt  umockcall_ut.c
tests/umockcallpairs_ut/: CMakeLists.txt  umockcallpairs_ut.c
tests/umockcallrecorder_ut/: CMakeLists.txt  umockcallrecorder_ut.c
tests/umockstring_ut/: CMakeLists.txt  umockstring_ut.c
tests/umocktypename_ut/: CMakeLists.txt  umocktypename_ut.c
tests/umocktypes_bool_ut/: CMakeLists.txt  umocktypes_bool_ut.c
tests/umocktypes_c_fixed_buffer_ut/: CMakeLists.txt
tests/umocktypes_c_ut/: CMakeLists.txt  umocktypes_c_ut.c
tests/umocktypes_charptr_ut/: CMakeLists.txt  umocktypes_charptr_ut.c
tests/umocktypes_stdint_ut/: CMakeLists.txt  umocktypes_stdint_ut.c
tests/umocktypes_struct_int/: CMakeLists.txt  main.c  umocktypes_struct_int.c
tests/umocktypes_ut/: CMakeLists.txt  umocktypes_ut.c
tests/umocktypes_wcharptr_ut/: CMakeLists.txt  umocktypes_wcharptr_ut.c
tests/umocktypes_windows_ut/: CMakeLists.txt  main.c  umocktypes_windows_mocked.c  umocktypes_windows_ut.c
tests/umocktypes_wout_init_ut/: CMakeLists.txt  umocktypes_wout_init_ut.c
