#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

#unit tests
if(${run_unittests})
    add_subdirectory(umockalloc_ut)
    add_subdirectory(umockstring_ut)
    add_subdirectory(umockautoignoreargs_ut)
    add_subdirectory(umockcall_ut)
    add_subdirectory(umockcallpairs_ut)
    add_subdirectory(umockcallrecorder_ut)
    add_subdirectory(umock_c_ut)
    add_subdirectory(umock_c_wout_init_ut)
    add_subdirectory(umocktypename_ut)
    add_subdirectory(umocktypes_ut)
    add_subdirectory(umocktypes_c_fixed_buffer_ut)
    add_subdirectory(umocktypes_wout_init_ut)
    add_subdirectory(umocktypes_bool_ut)
    add_subdirectory(umocktypes_c_ut)
    add_subdirectory(umocktypes_charptr_ut)
    add_subdirectory(umocktypes_stdint_ut)
    add_subdirectory(umocktypes_wcharptr_ut)
    add_subdirectory(umock_c_negt_noini_ut)
    add_subdirectory(umock_c_negt_ut)

    if(WIN32)
        add_subdirectory(umock_lock_factory_windows_ut)
        add_subdirectory(umocktypes_windows_ut)
    endif()
    if(UNIX)
        add_subdirectory(umock_lock_factory_pthread_ut)
    endif()
endif()

#int tests
if(${run_int_tests})
    add_subdirectory(umock_c_int)
    add_subdirectory(umock_c_reals_int)
    add_subdirectory(umock_c_mock_filters_int)
    add_subdirectory(umock_c_negt_int)
    add_subdirectory(umock_c_gen_func_decl_int)
    add_subdirectory(umock_c_malloc_hook_int)
    add_subdirectory(umock_c_ptrarg_leak_int)
    add_subdirectory(umocktypes_struct_int)
    if((WIN32) OR (UNIX))
        build_test_folder(umock_c_with_lock_factory_int)
    endif()

    if(WIN32)
        add_subdirectory(umock_c_windows_types_int)
        add_subdirectory(umock_c_reg_win_types_int)
    endif()
endif()